--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,10 +5,10 @@
 </head>
 <body>
     <h1>Login Page</h1>
-    <form action="/login" method="POST">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br>
-        <input type="submit" value="Login">
+    <form method="POST" action="/login">
+      <input type="text" name="user_id" placeholder="Enter Username" />
+      <input type="submit" value="Login" />
+    </form>
     </form>
 </body>
 </html>
