--- a/views/users.ejs
+++ b/views/users.ejs
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-  <h1>Users</h1>
-  <button id="fetch-users">Fetch Users via AJAX</button>
+  <h1>This is the orders page</h1>
+  <button id="fetch-users">Fetch Orders via AJAX</button>
   <ul id="users"></ul>
 </body>
 
