--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>Home Page</title>
-
-  <meta charset="UTF-8" >
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-
-  <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" />
-  <link rel="stylesheet" href="/vendor/border-box.css" />
-  <link rel="stylesheet" href="/styles/main.css" />
-  <link rel="stylesheet" href="/styles/layout.css" />
-
-  <script src="/vendor/jquery-3.0.0.js"></script>
-  <script defer src="/scripts/app.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Main Page</title>
 </head>
-
 <body>
-  <h1>This is the main page! 🥔</h1>
+  <form method="POST" action="/login">
+    <input type="number" name="user_id" placeholder="Enter User ID" />
+    <input type="submit" value="Login" />
+<h2>Main Page</h2>
+<p>Display food items here</p>
 </body>
-
 </html>
+
+
