create test routes with ejs files and test cart function with routes

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,294 +1,9 @@
-/* Generic HTML styling */
 body {
-  background-image: url('images/back.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-
-p {
-  font-size: 1.2em;
-  margin-bottom: 15px;
-}
-/* Navbar */
-.nav-bar {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color:#060606;
-  padding: 20px 30px;
-  font-family: 'Lobster', cursive;
-}
-
-.nav-bar h2 {
-  margin: 0 auto;
-  color: #f3f3f3;
-  font-size: 2.5em;
-}
-
-.menu-section {
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-
-.menu-btn {
-  font-size: 30px;
-  cursor: pointer;
-  color: #f3f3f3;
-}
-
-/* Container styling */
-.container {
-  display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
-  gap: 30px;
-  margin: 200px 0;
-  padding-top: 450px;
-}
-
-/* Food item styling */
-.food-item {
-  position: relative;
-  flex-basis: calc(33.33% - 20px);
-  text-align: center;
-  padding: 20px;
-  box-sizing: border-box;
-  background-color: #f9f9f9;
-  border-radius: 10px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  transition: transform 0.3s ease-in-out;
-}
-
-.food-item:hover {
-  transform: scale(1.03);
-}
-
-.food-item img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 10px;
-}
-
-.description {
-  position: absolute;
-  bottom: 35px;
-  left: 20px;
-  background-color: rgba(0,0,0,0.6);
-  color: white;
-  padding: 10px;
-  border-radius: 5px;
-  opacity: 0;
-  transition: opacity 0.5s;
-  pointer-events: none;
-}
-
-.food-item:hover .description {
-  opacity: 1;
-}
-
-/* Cart and button styling */
-.cart-section {
-  position: absolute;
-  right: 10px;
-}
-
-.cart-btn {
-  font-size: 30px;
-  cursor: pointer;
-}
-
-.submit-button {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-
-.contact-form input[type=submit] {
-  display: block;
-  margin: 0 auto;
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: #fefefb;
-  cursor: pointer;
-  border: none;
-  border-radius: 4px;
-}
-
-.submit-button:hover {
-  background-color: white;
-  color: black;
-  border: 2px solid #4CAF50;
-}
-
-.counter {
-  margin-left: 10px;
-}
-
-/* Contact section styling */
-.contact-section {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  background-color: #f3f3f3;
-}
-
-.contact-info, .contact-form {
-  width: 45%;
-}
-
-.contact-info img {
-  width: 20px;
-  height: 20px;
-}
-
-.contact-info h2, .contact-form h2 {
-  color: #333;
-}
-
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  min-width: 160px;
-  left: 0;
-  top: 100%;
-  z-index: 1;
-  background-color: #f9f9f9;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.contact-info p {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 24px;
-  letter-spacing: 0.5px;
-  color: #484848;
-}
-
-.contact-form input[type=text],
-.contact-form input[type=email],
-.contact-form textarea {
-  width: 100%;
-  padding: 15px;
-  margin: 10px 0;
-  border: 1px solid #ccc;
-  resize: vertical;
-}
-
-/* Homepage styling */
-#homepage {
-  font-family: 'Roboto', sans-serif;
-  color: #333;
-  line-height: 1.6;
-  margin-bottom: 30px;
-}
-
-#hero {
-  position: relative;
-  height: 400px;
-}
-
-#hero img {
-  width: 100%;
-  height: auto;
-}
-
-#hero h1 {
-  position: absolute;
-  top: 25%;
-  left: 40%;
-  transform: translate(-50%, -50%);
-  font-size: 3em;
-  color: #fff;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  margin-bottom: 50px; /* added */
-  font-family: 'Lobster', cursive;
-}
-
-#hero p {
-  position: absolute;
-  top: 40%;
-  left: 65%;
-  transform: translate(-50%, -50%);
-  font-size: 1.5em;
-  color: #fff;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-  font-family: 'Lobster', cursive;
-}
-
-.overlay-text {
-  position: absolute;
-  top: 200px; /* Center vertically */
-  left: 200px; /* Center horizontally */
-  transform: translate(-50%, -50%); /* Ensure the center of the element is the point from which to position */
-  color: rgb(255, 253, 253); /* Choose the color that best contrasts with your image */
-  text-align: center; /* To center the text lines */
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  font-size: 35px;
-  font-family: 'Lobster', cursive;
-}
-
-/* Return top button */
-.return-top {
-  display: inline-block;
-  padding: 10px 20px;
-  margin-top: 20px;
-  color: #FFF;
-  background-color: #ff6347;  /* You can change it to your preferred color */
-  text-decoration: none;
-  text-align: center;
-  font-weight: bold;
-  border-radius: 5px;
-  transition: background-color 0.3s;
-  font-family: 'Lobster', cursive;
-}
-
-.return-top:hover {
-  background-color: #95160d; /* Darker shade for hover effect */
-}
-
-/* Other styles */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  min-width: 160px;
-  left: 0;
-  top: 100%;
-  z-index: 1;
-  background-color: #fcfafa;
-  box-shadow: 0px 8px 16px 0px rgb(2, 251, 122);
-}
-
-.dropdown:hover .dropdown-content {
-  opacity: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.contact-us {
-  position: relative;
-}
-
-.our-contact {
-  margin-top: 30px;
-}
-
-.contact-form input[type=submit]:hover {
-  opacity:1;
+  align-items: center;
+  min-height: 100vh;
+  background: #a3d0db;
+  background: linear-gradient(227deg, #a3d0db 0%, #a3b0db 20%, #a3addb 34%, #a3dbd0 59%, #a3d0db 74%, #a3d0db 100%);
 }
