--- a/public/styles/mainn.css
+++ b/public/styles/mainn.css
@@ -335,3 +335,37 @@ body {
   .contact-form input[type=submit]:hover {
   opacity:1;
   }
+
+  /* about page */
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color:#060606;
+    padding: 20px 30px;
+    font-family: 'Lobster', cursive;
+    }
+.logo {
+color: white;
+font-size: 2.5em;
+
+}
+#bout {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 3.5em;
+  font-weight: 100px;
+  margin: 50px;
+}
+#description {
+  float: right;
+  width: 400px; /* Adjust the width as per your image size */
+  margin: 0 10px 10px 0; /* Add some margin to create space between the floated element and the text */
+  padding-right: 200px;
+  font-size: xx-large;
+}
+
+img {
+  width: 460px;
+  height: 400px;
+  margin: 50px;
+}
