--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,7 @@
             <a href="#hero">Home</a>
             <a href="#menu">Menu</a>
             <a href="#contact-us">Contact Us</a>
+            <a href="/about">About</a>
         </div>
     </div>
         <h2>Snack-Bar</h2>
