most elements added

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -20,6 +20,7 @@
 </head>
 <body>
   <h2 id="bout">About us.</h2>
+  <div class="colored-square"></div>
   <div class="picture">
   <img src="images/backhome.jpg" alt="Delicious food">
 </div>
