--- a/public/styles/mainn.css
+++ b/public/styles/mainn.css
@@ -354,18 +354,25 @@ font-size: 2.5em;
   font-family: 'Times New Roman', Times, serif;
   font-size: 3.5em;
   font-weight: 100px;
-  margin: 50px;
 }
 #description {
   float: right;
   width: 400px; /* Adjust the width as per your image size */
   margin: 0 10px 10px 0; /* Add some margin to create space between the floated element and the text */
-  padding-right: 200px;
+  padding-right: 50px;
   font-size: xx-large;
 }
 
 img {
   width: 460px;
   height: 400px;
-  margin: 50px;
+ float: right; /* Float the image to the right */
+      margin: 10px; /* Add some margin to create space between the image and other elements */
+}
+/* CSS styles for the colored square */
+.colored-square {
+  width: 450px;
+  height: 400px;
+  background-color: #fce5cc;
+  margin: 10px;
 }
