--- a/views/users.ejs
+++ b/views/users.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Home Page</title>
+  <title>Users</title>
 
   <meta charset="UTF-8" >
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
@@ -14,11 +14,13 @@
   <link rel="stylesheet" href="/styles/layout.css" />
 
   <script src="/vendor/jquery-3.0.0.js"></script>
-  <script defer src="/scripts/app.js"></script>
+  <script defer src="/scripts/users.js"></script>
 </head>
 
 <body>
-  <h1>Have fun! 🥔</h1>
+  <h1>Users</h1>
+  <button id="fetch-users">Fetch Users via AJAX</button>
+  <ul id="users"></ul>
 </body>
 
 </html>
