working with sass

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About</title>
-  <link rel="stylesheet" type="text/css" href="styles/mainn.css">
+  <link rel="stylesheet" type="text/css" href="styles/about.css">
 <div class="header">
   <h2 class="logo">Snack-Bar</h2>
   <div class="menu-section">
