--- a/styles/_mainn.scss
+++ b/styles/_mainn.scss
@@ -1,62 +1,66 @@
 /* Generic HTML styling */
 body {
-  background-image: url("images/back.jpg");
+  background-image: url('images/back.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-}
+  }
 
-.user-section p {
-  color: white;
-  display: flex;
-  flex-direction: column;
-}
+  .user-section p {
+    color: white;
+    display: flex;
+    flex-direction: column;
+  }
 
-p {
+  p {
   font-size: 1.2em;
   margin-bottom: 15px;
-}
-
-/* Navbar */
-.nav-bar {
+  }
+  /* Navbar */
+  .nav-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #060606;
+  background-color:#060606;
   padding: 20px 30px;
-  font-family: "Lobster", cursive;
-}
+  font-family: 'Lobster', cursive;
+  }
 
-.nav-bar h2 {
+
+  .nav-bar h2 {
   margin: 0 auto;
   color: #f3f3f3;
   font-size: 2.5em;
-}
+  }
 
-.menu-section {
+
+  .menu-section {
   position: relative;
   display: flex;
   align-items: center;
-}
+  }
 
-.menu-btn {
+
+  .menu-btn {
   font-size: 30px;
   cursor: pointer;
   color: #f3f3f3;
-}
+  }
 
-/* Container styling */
-.container {
+
+  /* Container styling */
+  .container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
   margin: 200px 0;
   padding-top: 450px;
-}
+  }
 
-/* Food item styling */
-.food-item {
+
+  /* Food item styling */
+  .food-item {
   position: relative;
   flex-basis: calc(33.33% - 20px);
   text-align: center;
@@ -64,50 +68,57 @@ p {
   box-sizing: border-box;
   background-color: #f9f9f9;
   border-radius: 10px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   transition: transform 0.3s ease-in-out;
-}
+  }
 
-.food-item:hover {
+
+  .food-item:hover {
   transform: scale(1.03);
-}
+  }
 
-.food-item img {
+
+  .food-item img {
   width: 100%;
   height: 200px;
   object-fit: cover;
   border-radius: 10px;
-}
+  }
 
-.description {
+
+  .description {
   position: absolute;
   bottom: 35px;
   left: 20px;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0,0,0,0.6);
   color: white;
   padding: 10px;
   border-radius: 5px;
   opacity: 0;
   transition: opacity 0.5s;
   pointer-events: none;
-}
+  }
 
-.food-item:hover .description {
+
+  .food-item:hover .description {
   opacity: 1;
-}
+  }
 
-/* Cart and button styling */
-.cart-section {
+
+  /* Cart and button styling */
+  .cart-section {
   position: absolute;
   right: 10px;
-}
+  }
 
-.cart-btn {
+
+  .cart-btn {
   font-size: 30px;
   cursor: pointer;
-}
+  }
 
-.submit-button {
+
+  .submit-button {
   background-color: #4CAF50;
   border: none;
   color: white;
@@ -119,9 +130,10 @@ p {
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
-}
+  }
 
-.contact-form input[type=submit] {
+
+  .contact-form input[type=submit] {
   display: block;
   margin: 0 auto;
   padding: 10px 20px;
@@ -130,40 +142,49 @@ p {
   cursor: pointer;
   border: none;
   border-radius: 4px;
-}
+  }
 
-.submit-button:hover {
+
+  .submit-button:hover {
   background-color: white;
   color: black;
   border: 2px solid #4CAF50;
-}
+  }
 
-.counter {
+
+  .counter {
   margin-left: 10px;
-}
+  }
 
-/* Contact section styling */
-.contact-section {
+
+  /* Contact section styling */
+  .contact-section {
   display: flex;
   justify-content: space-between;
   padding: 10px;
   background-color: #f3f3f3;
-}
+  }
 
-.contact-info, .contact-form {
+
+  .contact-info, .contact-form {
   width: 45%;
-}
+  }
 
-.contact-info img {
+
+  .contact-info img {
   width: 20px;
   height: 20px;
-}
+  }
 
-.contact-info h2, .contact-form h2 {
+
+  .contact-info h2, .contact-form h2 {
   color: #333;
-}
+  }
 
-.dropdown-content {
+
+
+
+  .dropdown-content {
   display: none;
   position: absolute;
   min-width: 160px;
@@ -171,46 +192,52 @@ p {
   top: 100%;
   z-index: 1;
   background-color: #f9f9f9;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-}
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
 
-.contact-info p {
+
+  .contact-info p {
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.5px;
   color: #484848;
-}
+  }
 
-.contact-form input[type=text],
-.contact-form input[type=email],
-.contact-form textarea {
+
+  .contact-form input[type=text],
+  .contact-form input[type=email],
+  .contact-form textarea {
   width: 100%;
   padding: 15px;
   margin: 10px 0;
   border: 1px solid #ccc;
   resize: vertical;
-}
+  }
 
-/* Homepage styling */
-#homepage {
-  font-family: "Roboto", sans-serif;
+
+  /* Homepage styling */
+  #homepage {
+  font-family: 'Roboto', sans-serif;
   color: #333;
   line-height: 1.6;
   margin-bottom: 30px;
-}
+  }
 
-#hero {
+
+  #hero {
   position: relative;
   height: 400px;
-}
+  }
 
-#hero img {
+
+  #hero img {
   width: 100%;
   height: auto;
-}
+  }
 
-#hero h1 {
+
+  #hero h1 {
   position: absolute;
   top: 25%;
   left: 40%;
@@ -218,12 +245,12 @@ p {
   font-size: 3em;
   color: #fff;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  margin-bottom: 50px;
-  /* added */
-  font-family: "Lobster", cursive;
-}
+  margin-bottom: 50px; /* added */
+  font-family: 'Lobster', cursive;
+  }
 
-#hero p {
+
+  #hero p {
   position: absolute;
   top: 40%;
   left: 65%;
@@ -231,22 +258,23 @@ p {
   font-size: 1.5em;
   color: #fff;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-  font-family: "Lobster", cursive;
-}
+  font-family: 'Lobster', cursive;
+  }
 
-.overlay-text {
+
+  .overlay-text {
   position: absolute;
-  top: 200px;
-  /* Center vertically */
-  left: 200px;
-  /* Center horizontally */
-  transform: translate(-50%, -50%);
-  /* Ensure the center of the element is the point from which to position */
-  color: #fffdfd;
-  /* Choose the color that best contrasts with your image */
-  text-align: center;
-  /* To center the text lines */
+  top: 200px; /* Center vertically */
+  left: 200px; /* Center horizontally */
+  transform: translate(-50%, -50%); /* Ensure the center of the element is the point from which to position */
+  color: rgb(255, 253, 253); /* Choose the color that best contrasts with your image */
+  text-align: center; /* To center the text lines */
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   font-size: 35px;
-  font-family: "Lobster", cursive;
-}
+  font-family: 'Lobster', cursive;
+  }
+
+
+
+
+
