--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -1,9 +1,10 @@
 /* styles/custom.css */
-
 /* Set a fixed width and height for the images */
 .food-item img {
-  width: 200px; /* You can adjust the value as needed */
-  height: 150px; /* You can adjust the value as needed */
+  width: 200px;
+  /* You can adjust the value as needed */
+  height: 150px;
+  /* You can adjust the value as needed */
 }
 
 /* Add some margin and padding to separate food items */
@@ -14,12 +15,15 @@
   border-radius: 5px;
 }
 
-
 #homepage img {
-  width: 100%; /* Set the width to 100% to make it fill the container */
-  height: auto; /* Automatically adjust the height to maintain the aspect ratio */
-  max-height: 400px; /* Set the maximum height to 400px to limit its size */
-  display: block; /* Ensure the image behaves as a block-level element */
-  margin: 0 auto; /* Center the image horizontally within its container */
+  width: 100%;
+  /* Set the width to 100% to make it fill the container */
+  height: auto;
+  /* Automatically adjust the height to maintain the aspect ratio */
+  max-height: 400px;
+  /* Set the maximum height to 400px to limit its size */
+  display: block;
+  /* Ensure the image behaves as a block-level element */
+  margin: 0 auto;
+  /* Center the image horizontally within its container */
 }
-
