--- a/styles/cart.scss
+++ b/styles/cart.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Arial", sans-serif;
+  font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0 0 100px 0;
   background: linear-gradient(to right, #b92b27, #1565C0);
@@ -23,7 +23,7 @@ h1 {
   border: 1px solid #ddd;
   margin: 10px 0;
   padding: 10px;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255,255,255,0.1);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -77,19 +77,19 @@ button {
 
 button:hover {
   background-color: #f90505;
-  box-shadow: 0 0 10px #cf1212;
+  box-shadow: 0 0 10px rgb(207, 18, 18);
   transform: scale(1.05);
 }
 
 footer {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0,0,0,0.7);
   color: #fff;
   text-align: center;
   padding: 20px 0;
   position: relative;
   width: 100%;
   bottom: 0;
-  font-family: "Lobster", cursive;
+  font-family: 'Lobster', cursive;
 }
 
 .container {
