--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -1,25 +1,22 @@
-/* styles/custom.css */
-
-/* Set a fixed width and height for the images */
-.food-item img {
-  width: 200px; /* You can adjust the value as needed */
-  height: 150px; /* You can adjust the value as needed */
+/* Other styles */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  left: 0;
+  top: 100%;
+  z-index: 1;
+  background-color: #fcfafa;
+  box-shadow: 0px 8px 16px 0px #02fb7a;
 }
 
-/* Add some margin and padding to separate food items */
-.food-item {
-  margin: 20px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+.dropdown:hover .dropdown-content {
+  opacity: 1;
 }
 
-
-#homepage img {
-  width: 100%; /* Set the width to 100% to make it fill the container */
-  height: auto; /* Automatically adjust the height to maintain the aspect ratio */
-  max-height: 400px; /* Set the maximum height to 400px to limit its size */
-  display: block; /* Ensure the image behaves as a block-level element */
-  margin: 0 auto; /* Center the image horizontally within its container */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
 }
-
