--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -45,3 +45,56 @@ img {
   background-color: #fce5cc;
   margin: 10px;
 }
+
+.menu-section {
+  position: relative;
+  display: inline-block;
+}
+
+.menu-btn {
+  font-size: 24px;
+  cursor: pointer;
+  color: white;
+  margin: 60px;
+  font-weight: 900;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  left: 0;
+  top: 100%;
+  z-index: 1;
+  background-color: #fcfafa;
+  box-shadow: 0px 8px 16px 0px #02fb7a;
+  font-family: "Lobster", cursive;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+.menu-section:hover .dropdown-content {
+  display: block;
+}
+
+#hero {
+  position: absolute;
+  top: 25%;
+  left: 40%;
+  transform: translate(-50%, -50%);
+  font-size: 3em;
+  color: #fff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  margin-bottom: 50px;
+  /* added */
+  font-family: "Lobster", cursive;
+}
