--- a/styles/about.scss
+++ b/styles/about.scss
@@ -46,3 +46,44 @@ img {
   margin: 10px;
 }
 
+// hamburger menu
+  .menu-section {
+    position: relative;
+    display: inline-block;
+  }
+
+  .menu-btn {
+    font-size: 24px;
+    cursor: pointer;
+    color: white;
+    margin: 60px;
+    font-weight: 900;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    left: 0;
+    top: 100%;
+    z-index: 1;
+    background-color: #fcfafa;
+    box-shadow: 0px 8px 16px 0px rgb(2, 251, 122);
+    font-family: "Lobster", cursive;
+    }
+
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #f1f1f1;
+  }
+
+  .menu-section:hover .dropdown-content {
+    display: block;
+  }
+// hamburger menu
