--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,6 +7,16 @@
   <link rel="stylesheet" type="text/css" href="styles/about.css">
 <div class="header">
   <h2 class="logo">Snack-Bar</h2>
+  <div class="menu-section">
+    <span id="menu-btn" class="menu-btn">&#9776;</span>
+    <div id="dropdown-content" class="dropdown-content">
+      <a href="#hero">Home</a>
+      <a href="#menu">Menu</a>
+      <a href="#contact-us">Contact Us</a>
+      <a href="/about">About</a>
+    </div>
+  </div>
+
 </div>
 </div>
 </head>
