--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -68,33 +68,16 @@ img {
   z-index: 1;
   background-color: #fcfafa;
   box-shadow: 0px 8px 16px 0px #02fb7a;
-  font-family: "Lobster", cursive;
 }
 
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {
-  background-color: #f1f1f1;
+  text-shadow: 0px 0px 2px black;
+  font-family: "Lobster", cursive;
 }
 
 .menu-section:hover .dropdown-content {
   display: block;
-}
-
-#hero {
-  position: absolute;
-  top: 25%;
-  left: 40%;
-  transform: translate(-50%, -50%);
-  font-size: 3em;
-  color: #fff;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  margin-bottom: 50px;
-  /* added */
-  font-family: "Lobster", cursive;
 }
