--- a/styles/about.scss
+++ b/styles/about.scss
@@ -69,19 +69,19 @@ img {
     z-index: 1;
     background-color: #fcfafa;
     box-shadow: 0px 8px 16px 0px rgb(2, 251, 122);
-    font-family: "Lobster", cursive;
     }
-
+    
   .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
-    display: block;
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 1);
+    font-family: 'Lobster', cursive;
   }
 
-  .dropdown-content a:hover {
-    background-color: #f1f1f1;
-  }
+  // .dropdown-content a:hover {
+  //   background-color: #f1f1f1;
+  // }
 
   .menu-section:hover .dropdown-content {
     display: block;
