--- a/views/about.ejs
+++ b/views/about.ejs
@@ -11,8 +11,8 @@
     <span id="menu-btn" class="menu-btn">&#9776;</span>
     <div id="dropdown-content" class="dropdown-content">
       <a href="/main">Home</a>
-      <a href="#menu">Menu</a>
-      <a href="#contact-us">Contact Us</a>
+      <a href="/main#menu">Menu</a>
+      <a href="/main#contact-us">Contact Us</a>
     </div>
   </div>
 </div>
