changing the hard coded data

--- a/styles/mainn.scss
+++ b/styles/mainn.scss
@@ -52,6 +52,8 @@
 
 
   /* Food item styling */
+
+
   .food-item {
   position: relative;
   flex-basis: calc(33.33% - 20px);
@@ -215,7 +217,9 @@
   line-height: 1.6;
   margin-bottom: 30px;
   }
-
+  // #menu-items {
+  //   margin-top: 100px;
+  // }
 
   #hero {
   position: relative;
