--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,9 +46,25 @@
       </section>
       <div class="clear"></div>
   </div>
-
-
-    <div class="container" id="menu">
+  <div class="menu-items">
+  <% if (foodItems && foodItems.length > 0) { %>
+    <ul>
+      <% foodItems.forEach(foodItem => { %>
+        <div class="food-item" id="food">
+          <img src="<%= foodItem.photo_url %>" alt="<%= foodItem.name %>">
+          <h3><%= foodItem.name %></h3>
+          <p>$<%= foodItem.price %></p>
+          <button type="submit" class="submit-button">Add to Cart</button>
+          <output name="counter" class="counter" id="cart-count"></output>
+          <div class="description">
+              <p><%= foodItem.description %></p>
+          </div>
+      </div>
+      <% }); %>
+    </ul>
+  <% } %>
+</div>
+    <!-- <div class="container" id="menu">
 
       <div class="food-item" id="italian-burger">
         <img src="images/italianburger.jpg" alt="Italian burger">
@@ -144,7 +160,7 @@
           <p>Savor the flavors of the North with our Combo 3! This meal includes our North Indian Thali, featuring a variety of delectable dishes such as dal makhani, paneer butter masala, mix veg, jeera rice, raita, naan, and a sweet dessert. It's a feast that's sure to please!</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="contact-section">
       <div class="contact-us" id="contact-us">
