--- a/views/index1.ejs
+++ b/views/index1.ejs
@@ -19,7 +19,7 @@
         <div class="cart-section">
           <button method="POST" action="/cart1" id="cart-btn" class="cart-btn">🛒<span id="cart-count"></span></button>
           <div class="actions">
-            <form name="cartSubmit" method="POST" action="/cart1">
+            <form name="cartSubmit" method="POST" action="/index1">
             <button type="submit">CART1 SUBMIT</button>
             </form>
         </div>
