updated users adding submit-form

--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -77,7 +77,7 @@ button {
 
 button:hover {
   background-color: #f90505;
-  box-shadow: 0 0 10px rgb(207, 18, 18);
+  box-shadow: 0 0 10px #cf1212;
   transform: scale(1.05);
 }
 
