updated team photo and moved some of the html to the ejs file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -178,13 +178,16 @@
     </div>
       <div class="contact-form">
         <h2>Leave a Message</h2>
-        <form action="/submit_form" method="post">
+        <form id="contact-form" action="/submit_form" method="post">
           <input type="text" id="name" name="name" placeholder="First Name">
+          <input type="text" id="name" name="name" placeholder="Last Name">
           <input type="text" id="email" name="email" placeholder="Your Email">
           <input type="text" id="phone" name="phone" placeholder="Your Phone Number">
           <textarea id="message" name="message" placeholder="Your Message"></textarea>
           <input type="submit" value="Submit">
         </form>
+        <div id="form-error-message" style="display: none; color: red;"></div>
+        <div id="form-success-message" style="display: none; color: green;"></div>
         <div class="our-contact">
           <h3>Our Contact Information</h3>
           <p>Email: info@example.com</p>
@@ -195,8 +198,10 @@
     </div>
 
     <script src="scripts/icon.js"></script>
-    <script src="scripts/menu.js"></script>
+    <script src="scripts/cart.js"></script>
+    <script src="scripts/users.js"></script>
 </body>
 </html>
+
 
 
