--- a/views/checkout1.ejs
+++ b/views/checkout1.ejs
@@ -9,18 +9,28 @@
 </head>
 <!-- <script>alert("order being confirmed!")</script> -->
 <body>
+  <div id="wrapper">
+  <header>
   <div class="thanks">
-    <img src="/images/thanks.png" alt="Thank You" height="1000px" width="1000px">
+    <img src="/images/thanks.png" alt="thank you" height="1500px" width="1500px">
     </div>
 <div>
-<p>Thank You!!!</p>
+<p>Hope you enjoy!!!</p>
 <p>You will recieve an order confirmation via text shortly</p>
 </div>
-<div class="note">
+</header>
+<!-- <div class="container">
+    <img src="/images/table.png" alt="table" height="2000px" width="4000px">
+
+</div> -->
+<footer>
+  <div class="note">
     <p>If there are any issues please don't hesitate and reach out to us.</p>
-  <form method="POST" action="/cart1/checkout1">
-  <button type="submit">Contact Information</button>
+  <form id="contact" method="POST" action="/cart/checkout1">
+  <button class="button" type="submit">Contact Information</button>
   </form>
+</div>
+</footer>
 </div>
 </body>
 </html>
