--- a/views/index.ejs
+++ b/views/index.ejs
@@ -195,7 +195,8 @@
     </div>
 
     <script src="scripts/icon.js"></script>
-    <script src="scripts/menu.js"></script>
+    <script src="scripts/cart.js"></script>
+    <!-- <script src="scripts/menu.js"></script> -->
 </body>
 </html>
 
