fixing random details

--- a/views/checkout1.ejs
+++ b/views/checkout1.ejs
@@ -12,23 +12,19 @@
   <div id="wrapper">
   <header>
   <div class="thanks">
-    <img src="/images/thanks.png" alt="thank you" height="1500px" width="1500px">
+    <img src="/images/thanks.png" alt="thank you" height="450px" width="450px">
     </div>
 <div>
 <p>Hope you enjoy!!!</p>
 <p>You will recieve an order confirmation via text shortly</p>
 </div>
 </header>
-<!-- <div class="container">
-    <img src="/images/table.png" alt="table" height="2000px" width="4000px">
-
-</div> -->
 <footer>
   <div class="note">
     <p>If there are any issues please don't hesitate and reach out to us.</p>
-  <form id="contact" method="POST" action="/cart/checkout1">
-  <button class="button" type="submit">Contact Information</button>
-  </form>
+
+    <a class="button" href="/main#contact-us">Contact Us</a>
+
 </div>
 </footer>
 </div>
