--- a/styles/checkout.scss
+++ b/styles/checkout.scss
@@ -3,7 +3,6 @@ body {
   display: flex;
   justify-content: center;
 }
-
 #wrapper {
   padding-top: 25px;
   display: flex;
@@ -13,18 +12,25 @@ body {
   justify-content: space-evenly;
   align-items: center;
   min-height: 100vh;
-  background-color: #8e3b3b;
+  background-color: rgb(142, 59, 59);
   color: black;
   font-size: 1.5em;
-}
 
+}
 header {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 }
-
+#contact {
+  // height: 1000px;
+  // width: 1000px;
+}
+.container {
+  // height: 1500px;
+  // width: 100;
+}
 p {
   color: white;
   font-size: 1em;
@@ -44,10 +50,9 @@ a {
 a:hover {
   background-color: #45a049;
 }
-
-body footer .note {
+ body footer .note{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: auto;
+  margin:auto;
 }
