--- a/views/index.ejs
+++ b/views/index.ejs
@@ -190,7 +190,7 @@
         <div id="form-success-message" style="display: none; color: green;"></div>
         <div class="our-contact">
           <h3>Our Contact Information</h3>
-          <p>Email: info@example.com</p>
+          <p>Email: info@Snack-Bar.com</p>
           <p>Phone: +1 2342564219</p>
         </div>
         <a href="#top" class="return-top">Return to Top</a>
