--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/vendor/border-box.css" />
   <link rel="stylesheet" href="/public/styles/main.css" />
   <link rel="stylesheet" href="/public/styles/layout.css" />
-  <link rel="stylesheet" href="/public/styles/orders.css" />
+  <link rel="stylesheet" href="/styles/orders.css" />
 
   <script src="/vendor/jquery-3.0.0.js"></script>
   <script defer src="/scripts/orders.js"></script>
