fixing broken links

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -24,7 +24,7 @@
               <form method="GET" action="/main">
                 <button>Continue Shopping</button>
               </form>
-              <form method="POST" action="/checkout1">
+              <form method="GET" action="/cart/checkout">
                 <button id="place-order">Place order</button>
               </form>
             </div>
